--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
-    "@strapi/plugin-i18n": "4.1.2",
-    "@strapi/plugin-users-permissions": "4.1.2",
-    "@strapi/strapi": "4.1.2",
+    "@strapi/plugin-documentation": "^4.1.3",
+    "@strapi/plugin-i18n": "4.1.3",
+    "@strapi/plugin-users-permissions": "4.1.3",
+    "@strapi/strapi": "4.1.3",
     "pg": "8.6.0",
-    "strapi-plugin-moesif": "^2.0.5"
+    "strapi-plugin-moesif": "^2.0.5",
+    "strapi-plugin-transformer": "^1.0.3"
   },
   "author": {
     "name": "A Strapi developer"
@@ -24,7 +25,7 @@
     "uuid": "3f2cc7be-3f13-481b-a3df-2602916518cd"
   },
   "engines": {
-    "node": ">=12.x.x <=16.x.x",
+    "node": ">=12.x.x <=17.x.x",
     "npm": ">=6.0.0"
   },
   "license": "MIT"
